[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://art/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ScreenToolbox/SaveGridDialog.gd" type="Script" id=3]
[ext_resource path="res://ScreenToolbox/StyledFileDialog.gd" type="Script" id=4]
[ext_resource path="res://ScreenToolbox/StyledConfirmationDialog.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 2 )

[node name="SaveGridDialog" type="WindowDialog"]
margin_right = 393.0
margin_bottom = 282.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 269.0
margin_bottom = 208.0
popup_exclusive = true
window_title = "Overwrite file?"
dialog_text = "
One or more files already exists with the given filename. Would you like to export anyway?
"
dialog_autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 540.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 400 )
popup_exclusive = true
window_title = "Open a Directory"
resizable = true
dialog_hide_on_ok = true
mode = 2
access = 2
show_hidden_files = true
current_dir = "/home/harry/Documents/WORK/GridMaker_3d_v2"
current_path = "/home/harry/Documents/WORK/GridMaker_3d_v2/"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = -20.0
margin_right = 393.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 383.0
margin_bottom = 286.0
custom_constants/separation = 19

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_left = 93.0
margin_right = 280.0
margin_bottom = 24.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "ExPORT GRID"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 373.0
margin_bottom = 97.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 373.0
margin_bottom = 20.0
text = "Filename"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 270.0
margin_bottom = 54.0
focus_next = NodePath("../../VBoxContainer2/HBoxContainer/LineEdit")
focus_previous = NodePath("../../VBoxContainer3/HBoxContainer/CheckBox")
size_flags_horizontal = 2
custom_constants/minimum_spaces = 20
placeholder_text = "GridLines"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 373.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_right = 373.0
margin_bottom = 20.0
text = "Save Location"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 373.0
margin_bottom = 58.0
custom_constants/separation = 13

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 270.0
margin_bottom = 34.0
focus_next = NodePath("../Button3")
focus_previous = NodePath("../../../VBoxContainer/LineEdit")
custom_constants/minimum_spaces = 20

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 283.0
margin_right = 373.0
margin_bottom = 34.0
focus_next = NodePath("../../../VBoxContainer3/HBoxContainer/CheckBox")
focus_previous = NodePath("../LineEdit")
text = "Browse"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 373.0
margin_bottom = 223.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer3"]
margin_right = 373.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_top = 5.0
margin_right = 221.0
margin_bottom = 25.0
text = "separate layers: "

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 225.0
margin_right = 255.0
margin_bottom = 30.0

[node name="Label2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/VBoxContainer3"]
visible = false
margin_top = 32.0
margin_right = 269.0
margin_bottom = 62.0
focus_mode = 2
custom_fonts/normal_font = SubResource( 3 )
text = "grid lines will be saved as separate images."
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 242.0
margin_right = 292.0
margin_bottom = 276.0
size_flags_horizontal = 6
custom_constants/separation = 32

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 5
text = "Cancel"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 122.0
margin_right = 212.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 5
text = "export"

[node name="Tween" type="Tween" parent="."]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="hide" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_ConfirmationDialog_hide"]
[connection signal="confirmed" from="FileDialog" to="FileDialog" method="_on_FileDialog_confirmed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="hide" from="FileDialog" to="FileDialog" method="_on_FileDialog_hide"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
